--- a/FAQPage.html
+++ b/FAQPage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="english">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,22 +12,73 @@
 
         <!-- Bootstrap JavaScript -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+        <title>FAQ Page</title>
+
+        <style>
+            body{
+                display: grid;
+                grid-template-rows: 1fr auto;
+            }
+            header, footer{
+                padding: 1em;
+            }
+
+            div#Use, #Edit, #Password, #Email, #Saved, #Filter, #Xello{
+                position: relative;
+                left: 20%;
+                width: 60vw;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                border-style: solid;
+                border-width: 2px;
+                border-radius: 5px;
+                background-color: white;
+                cursor: pointer;
+                margin-top: 5px;
+                padding: 5px;
+                transition: transform 0.1s ease, box-shadow 0.1s ease;
+            }
+
+            ul.FAQ{
+                max-height: 0;
+                opacity: 0;
+                overflow: hidden;
+                transition: all 0.6s ease;
+                list-style: none;
+                padding: 0;
+                margin-top: 0;
+                text-align: center;
+            }
+
+            div.open ul {
+                max-height: 500px;
+                opacity: 1;
+                margin-top: 10px;
+            }
+
+            a{
+                text-decoration: none;
+            }
+        </style>
     </head>
     <body>
         <main>
-            <div class="row h-100 bg-primary d-flex align-items-center justify-content-center">
+
+            <div class="row bg-primary align-items-center justify-content-center">
                 <nav class="navbar navbar-expand navbar-light bg-primary">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="https://www.ftcsc.org/article/2646895"><img src="https://cmsv2-assets.apptegy.net/uploads/27023/logo/29836/FranklinTownship_web.png" width="300px"></a>
+                        <a class="navbar-brand" href="https://www.ftcsc.org/article/2646895"><img src="https://cmsv2-assets.apptegy.net/uploads/27023/logo/29836/FranklinTownship_web.png" alt="" width="300px"></a>
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <button class="nav-link text-black" href="#">Survey</button>
+                                <button class="nav-link"><a class="text-black" href="#">Survey</a></button>
                             </li>
                             <li class="nav-item">
-                                <button class="nav-link text-black" href="#">Browse</button>
+                                <button class="nav-link"><a class="text-black" href="#">Browse</a></button>
                             </li>
                             <li class="nav-item">
-                                <button class="nav-link text-black" href="#">FAQ</button>
+                                <button class="nav-link active"><a class="text-black" href="#">FAQ</a></button>
                             </li>
                         </ul>
                         <button class="nav-item">Login</button>
@@ -35,54 +86,82 @@
                 </nav>
             </div>
 
+            <div class="container-fluid">
+                <div class="Question" id="Use">How do I use course recommender?
+                    <ul class="FAQ">
+                        <li>To use the course recommender, create an account with your school email. Once you do this, fill out the survey, and a wide variety of courses will appear for you to look at!</li>
 
-            <div class="row d-flex align-items-center h-100 flex-column">
-                <ul>
-                    <li class="dropdown">
-                        <a class="text-black dropdown-toggle" href="#" id="property-type-links" role="button" data-bs-toggle="dropdown">How do I use course recommender?</a>
-                        <ul class="dropdown-menu dropdown-menu-light">
-                            <li><p class="dropwdown-item">words</p></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a class="text-black dropdown-toggle" href="#" id="property-type-links" role="button" data-bs-toggle="dropdown">How do I edit my information?</a>
-                        <ul class="dropdown-menu dropdown-menu-light">
-                            <li><p class="dropwdown-item">words</p></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a class="text-black dropdown-toggle" href="#" id="property-type-links" role="button" data-bs-toggle="dropdown">How do I create/reset my password?</a>
-                        <ul class="dropdown-menu dropdown-menu-light">
-                            <li><p class="dropwdown-item">words</p></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a class="text-black dropdown-toggle" href="#" id="property-type-links" role="button" data-bs-toggle="dropdown">Can I change my Email?</a>
-                        <ul class="dropdown-menu dropdown-menu-light">
-                            <li><p class="dropwdown-item">words</p></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a class="text-black dropdown-toggle" href="#" id="property-type-links" role="button" data-bs-toggle="dropdown">Who can see my saved courses?</a>
-                        <ul class="dropdown-menu dropdown-menu-light">
-                            <li><p class="dropwdown-item">words</p></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a class="text-black dropdown-toggle" href="#" id="property-type-links" role="button" data-bs-toggle="dropdown">Can I filter out courses I don't want?</a>
-                        <ul class="dropdown-menu dropdown-menu-light">
-                            <li><p class="dropwdown-item">words</p></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a class="text-black dropdown-toggle" href="#" id="property-type-links" role="button" data-bs-toggle="dropdown">How do I access Xello?</a>
-                        <ul class="dropdown-menu dropdown-menu-light">
-                            <li><p class="dropwdown-item">words</p></li>
-                        </ul>
-                    </li>
-                </ul>
+                    </ul>
+                </div><br>
+                <div class="Question" id = "Edit">How do I edit my information?
+                    <ul class="FAQ">
+                        <li>In your account information screen, you can choose the <i>Edit information</i> page and edit everything from there.</li>
+
+                    </ul>
+                </div><br>
+                <div class="Question" id = "Password">How do I reset my password?
+                    <ul class="FAQ">
+                        <li>To reset your password, please go to the password reset page. From there, enter your email and the password you wish to change it to. Once your receive the email you can confirm your password there.</li>
+
+                    </ul>
+                </div><br>
+                <div class="Question" id = "Email">Can I change my email?
+                    <ul class="FAQ">
+                        <li>Course recommender requires you use your school email to use this website. So changing to a personal email will not work.</li>
+
+                    </ul>
+                </div><br>
+                <div class="Question" id = "Saved">Who can see my saved courses?
+                    <ul class="FAQ">
+                        <li>Your parents, counselor and yourself have access to courses you are interested in. </li>
+
+                    </ul>
+                </div><br>
+                <div class="Question" id = "Filter">Can I filter out courses I don't want?
+                    <ul class="FAQ">
+                        <li><strong>Yes</strong>, you are able to filter out courses you are not interested in by finding the filter button and entering your preferences.</li>
+
+                    </ul>
+                </div><br>
+                <div class="Question" id = "Xello">How do I access Xello?
+                    <ul class="FAQ">
+                        <li>You can either click the link at the bottom of this page or go to <a class="text-black" href="https://xello.world/en/">Xello.com</a>.</li>
+
+                    </ul>
+                </div><br>
             </div>
 
+            <script>
+                let Use = document.getElementById("Use");
+                let Edit = document.getElementById("Edit");
+                let Password = document.getElementById("Password");
+                let Email = document.getElementById("Email");
+                let Saved = document.getElementById("Saved");
+                let Filter = document.getElementById("Filter");
+                let Xello = document.getElementById("Xello");
+
+                Use.addEventListener("click", function() {
+                    this.classList.toggle("open");
+                });
+                Edit.addEventListener("click", function() {
+                    this.classList.toggle("open");
+                });
+                Password.addEventListener("click", function() {
+                    this.classList.toggle("open");
+                });
+                Email.addEventListener("click", function() {
+                    this.classList.toggle("open");
+                });
+                Saved.addEventListener("click", function() {
+                    this.classList.toggle("open");
+                });
+                Filter.addEventListener("click", function() {
+                    this.classList.toggle("open");
+                });
+                Xello.addEventListener("click", function() {
+                    this.classList.toggle("open");
+                });
+            </script>
 
             <footer>
                 <div class="row h-100 bg-primary d-flex align-items-center justify-content-center">
