--- a/Home-Page.html
+++ b/Home-Page.html
@@ -84,11 +84,9 @@
       </div>
     </nav>
   </div>
-
+<!-- main info -->
   <div>
-    <button id="GetStarted" class="bg-primary text-white">Get Started</button>
-
-
+    <button id="GetStarted" class="bg-primary text-white"><a href="#">Get Started</a></button>
   </div>
 
   <script>
