--- a/Home-Page.html
+++ b/Home-Page.html
@@ -19,6 +19,7 @@
       display: grid;
       grid-template-rows: 1fr auto;
     }
+
     header, footer{
       padding: 1em;
     }
@@ -84,9 +85,10 @@
       </div>
     </nav>
   </div>
+
 <!-- main info -->
   <div>
-    <button id="GetStarted" class="bg-primary text-white"><a href="#">Get Started</a></button>
+    <button id="GetStarted" class="bg-primary text-white"><a href="#"><h1 class = "text-white">Get Started</h1></a></button>
   </div>
 
   <script>
