--- a/Results Page.html
+++ b/Results Page.html
@@ -6,12 +6,82 @@
     <title>Bootstrap & jQuery Skeleton</title>
     <!-- Bootstrap 5 CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
+    <style>
+        .result {
+            height: 300px;
+            width: 200px;
+            margin: 40px;
 
-    <!-- jQuery 3.x CDN -->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <!-- Bootstrap 5 Bundle (JS + Popper) CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+        }
+    </style>
+</head>
+<div class="row bg-primary align-items-center justify-content-center">
+    <nav class="navbar navbar-expand navbar-light bg-primary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="https://www.ftcsc.org/article/2646895"><img src="https://cmsv2-assets.apptegy.net/uploads/27023/logo/29836/FranklinTownship_web.png" alt="" width="300px"></a>
+            <ul class="navbar-nav">
+                <li class="nav-item border border-light ">
+                    <button class="nav-link"><a class="text-white" href="#">Survey</a></button>
+                </li>
+                <li class="nav-item border border-light ">
+                    <button class="nav-link"><a class="text-white" href="#">Browse</a></button>
+                </li>
+                <li class="nav-item border border-light ">
+                    <button class="nav-link"><a class="text-white" href="#">FAQ</a></button>
+                </li>
+            </ul>
+            <button class="nav-item">Login</button>
+        </div>
+    </nav>
+</div>
+<!--Contact Content-->
+<div class="container-fluid d-flex align-items-center justify-content-center box1 ">
+    <div>
+        <h1 class="text-center">Recommended Courses:</h1>
+        <div class="border border-5 border-secondary text-center p-5 m-5" >
+            <h1 class="result">Place Holder Info</h1>
+        </div>
+    </div>
+    <div>
+        <h1 class="text-center">Sample Schedule:</h1>
+        <div class="border border-5 border-secondary text-center p-5 m-5" >
+            <h1 class="result">Place Holder Info</h1>
+        </div>
+    </div>
+</div>
+
+<!--Footer-->
+<footer>
+    <div class="row h-100 bg-primary d-flex align-items-center justify-content-center">
+        <div class="pt-1 pb-2 ps-2 pe-4 col-md-5">
+            <h5 class="text-white">Franklin Central High School Counseling Services</h5><br>
+            <h6 class="text-white">Franklin Central High School Course Recommender</h6>
+        </div>
+        <div class="pt-1 pb-2 ps-2 pe-4 col-md-2 text-white">
+            <h6><strong>Related</strong></h6>
+            <a>Xello Launchpad</a>
+            <a>Placeholder</a>
+            <a>Placeholder</a>
+        </div>
+        <div class="pt-1 pb-2 ps-2 pe-4 col-md-2 text-white">
+            <h6><strong>Learn More</strong></h6>
+            <a>Counseling Homepage</a>
+            <a>Course Guide</a>
+            <a>Placeholder</a>
+        </div>
+        <div class="pt-1 pb-2 ps-2 pe-4 col-md-2 text-white">
+            <h6><strong>Support</strong></h6>
+            <a>Request a Counselor</a>
+            <a>Contact Information</a>
+        </div>
+    </div>
+</footer>
+
+
+
+<!-- jQuery 3.x CDN -->
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+<!-- Bootstrap 5 Bundle (JS + Popper) CDN -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
