--- a/Results Page.html
+++ b/Results Page.html
@@ -8,11 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .result {
-            height: 300px;
-            width: 200px;
-            margin: 40px;
+            height: 400px;
+            width: 300px;
+            margin: 50px;
 
         }
+        
     </style>
 </head>
 <div class="row bg-primary align-items-center justify-content-center">
@@ -35,14 +36,14 @@
     </nav>
 </div>
 <!--Contact Content-->
-<div class="container-fluid d-flex align-items-center justify-content-center box1 ">
-    <div>
+<div class="container-fluid d-flex align-items-center justify-content-center">
+    <div class="box">
         <h1 class="text-center">Recommended Courses:</h1>
         <div class="border border-5 border-secondary text-center p-5 m-5" >
             <h1 class="result">Place Holder Info</h1>
         </div>
     </div>
-    <div>
+    <div  class="box">
         <h1 class="text-center">Sample Schedule:</h1>
         <div class="border border-5 border-secondary text-center p-5 m-5" >
             <h1 class="result">Place Holder Info</h1>
